# serato-clone

./: CMakeLists.txt
.github/workflows/: build-mac.yml  main.yml
JUCE/: README.md
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
